--- a/index.html
+++ b/index.html
@@ -44,29 +44,29 @@
     </header>
     <section>
         <div id="img">
-        <h2>Desafio 1 : <a title="clique para acessar" href="antecessor-suce.html"> Antecessor e Sucessor de Números</h2><br>
+        <h2>Desafio 1 : <a target="_blank" title="clique para acessar" href="antecessor-suce.html"> Antecessor e Sucessor de Números</h2><br>
         <img src="img/ant-suc-print.jpeg" alt="">
         </a><br>
         <hr>
         <br><br><br>
-        <h2>Desafio 2 : <a href="calcu-troco.html"title='clique para acessar'> Calculando o Troco <br><br><br>
+        <h2>Desafio 2 : <a target="_blank" href="calcu-troco.html"title='clique para acessar'> Calculando o Troco <br><br><br>
         <img src="img/troco-print.jpeg" alt=""></a></h2>
         <br><br><br>
-        <h2>Desafio 3 : <a title="clique para acessar" href="conver-med.html"> Convertor de Medidas </h2><br>
+        <h2>Desafio 3 : <a target="_blank" title="clique para acessar" href="conver-med.html"> Convertor de Medidas </h2><br>
         <br>
         <img src="img/calc.metro-print.jpeg" alt=""></a>
         <br><br>
-        <h2>Desafio 4 : <a title="clique para acessar" href="conver.monet.html">Conversor Monetário
+        <h2>Desafio 4 : <a target="_blank" title="clique para acessar" href="conver.monet.html">Conversor Monetário
             <br><br><img src="img/conver.monet-print.jpeg" alt=""></a></h2>
          <br><br>
-         <h2>Desafio 5 : <a title="clique pra acessar" href="calc.desc.html">Calcular Desconto <img src="img/desc-print.jpeg" alt=""></a></h2>
-         <h2>Desafio 6 : <a title="clique para acessar" href="Bhaskara.html"> Resolvendo Bhaskara <img src="img/bhaskara-print.jpeg" alt=""></a></h2>
+         <h2>Desafio 5 : <a target="_blank" title="clique pra acessar" href="calc.desc.html">Calcular Desconto <img src="img/desc-print.jpeg" alt=""></a></h2>
+         <h2>Desafio 6 : <a target="_blank" title="clique para acessar" href="Bhaskara.html"> Resolvendo Bhaskara <img src="img/bhaskara-print.jpeg" alt=""></a></h2>
          <br><br>
-         <h2>Desafio 7 : <a title="clique para acessar" href="Bissexto.html"> Ano Bissexto <br><br><img src="img/bissexto-print.jpeg" alt=""></a></h2>
+         <h2>Desafio 7 : <a target="_blank" title="clique para acessar" href="Bissexto.html"> Ano Bissexto <br><br><img src="img/bissexto-print.jpeg" alt=""></a></h2>
          <br>
-         <h2>Desafio 8 : <a title="clique para acessar" href="anal.prec.html"> Analisador de Preço<br><br><img src="img/anal.prec-print.jpeg" alt=""></h2></a>
+         <h2>Desafio 8 : <a target="_blank" title="clique para acessar" href="anal.prec.html"> Analisador de Preço<br><br><img src="img/anal.prec-print.jpeg" alt=""></h2></a>
          <br><br>
-         <h2>Desafio 9 : <a title="clique para acessar" href="boletim.html">Média do Boletim <br><br><img src="img/boletim-print.jpeg" alt=""></a></h2>
+         <h2>Desafio 9 : <a target="_blank" title="clique para acessar" href="boletim.html">Média do Boletim <br><br><img src="img/boletim-print.jpeg" alt=""></a></h2>
         </div>
 
     </section>
