--- a/Bhaskara.html
+++ b/Bhaskara.html
@@ -8,10 +8,19 @@
     <style>
         section{
             border: 10px solid #999;
-            padding: 20px 20px 20px 20px ;
+            padding: 40px 40px 20px 40px ;
             box-shadow: 13px 13px 13px rgba(0,0,0,7);
         }
+        header {
+            text-align: center;
+        }
+        div{
+            text-align: center;
+            max-width: 100vw;
+            min-width: 80vw;
+        }
         h1{
+            text-align: center;
             padding: 5px 5px 5px 5px ;
             background: #999;
             box-shadow: 10px 10px 10px  ;
@@ -19,21 +28,23 @@
     
         }
         #res{
+            align-items: center;
+            text-align: center;
             background-color: rgb(219, 213, 213);
         }
         input{
+            text-align: center;
             font-size: 15pt;
             border-radius: 20px;
             box-shadow: 10px 10px 10px  ;
             width: 200px;
             height: 50px;
             transition:  1.5s;
-            position: relative;
-            right: -200px;
             transition: all 2s ease-in-out;
         }
         input:hover {
             transform: scaleX(1.5);
+            
         }
         footer{
             text-align: center;
