--- a/calcu-troco.html
+++ b/calcu-troco.html
@@ -12,9 +12,15 @@
             background-color: #999;
             border: 10px  solid white;
             box-shadow: 5px 5px 5px ;
-            margin: 0px 100px ;
             margin-top: 100px;
+            min-width: 70vw;
+            max-width: 100vw;
             
+        }
+        div{
+            margin-left: auto;
+            margin-right: auto;
+        
         }
         #header{
             padding-top: 100px;
@@ -42,7 +48,8 @@
     </style>
 </head>
 <body>
-    <header>
+    <div id="corpo">
+<header>        
     <h1>Calculando o Troco !!</h1>
     <input title="produto" value="Comprar Produto" type="button" name="produto" id="produto"onclick="comprar()" >
 
@@ -56,6 +63,8 @@
     facebook & instagran
 
 </footer>
+</div>
+
     <script>
         function comprar(){
             let pro = document.getElementsByName('produto')
