--- a/conver-med.html
+++ b/conver-med.html
@@ -13,18 +13,19 @@
             text-align: center;
             padding: 10px 10px 10px 10px ;
             border-radius: 10px solid black;
-            text-overflow: clip;
             font-size: 15pt;
             border: 10px solid #999;
+            max-width: 100vw;
+            min-width: 80vw;
         }
         h1{
             box-shadow: 10px 10px 10px ;
-            padding: 50px ;
+            padding: 20px ;
             margin-bottom: 0px;
         }
         #res{
             background-color: #999;
-            padding: 60px;
+            padding: 30px;
             padding-top: 10px;
             box-shadow: 10px 10px 10px 10px black;
             color: rgb(205, 26, 9);
@@ -32,8 +33,8 @@
         input{
             position: relative;
             top: 30px;
-            width: 300px;
-            height: 100px;
+            width: 250px;
+            height: 80px;
             border: 5px solid #666;
             box-shadow: 10px 10px 10px ;
         }
